--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
+
+# Clerk Keys
+# https://clerk.com/docs/quickstarts/nextjs#next-js-quickstart
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
