--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ DATABASE_URL="file:./db.sqlite"
 # https://clerk.com/docs/quickstarts/nextjs#next-js-quickstart
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
+
+# Custom Clerk URLs
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
