--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^14.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^10.0.5",
     "zod": "^3.23.3"
   },
   "devDependencies": {
