Updated env file to use vercel
Signed-off-by: JagTheFriend <JagTheFriend12@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,10 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+# uses connection pooling
+POSTGRES_PRISMA_URL=""
+# uses a direct connection
+POSTGRES_URL_NON_POOLING=""
 
 # Clerk Keys
 # https://clerk.com/docs/quickstarts/nextjs#next-js-quickstart
